improve react/vue input example styles

--- a/examples/react-input/src/style.css
+++ b/examples/react-input/src/style.css
@@ -2,10 +2,8 @@
   box-sizing: border-box;
 }
 
-textarea {
-  width: 100%;
-  padding: 16px;
-  line-height: 1.4;
-  resize: none;
+input {
+  width: 400px;
+  padding: 8px 12px;
   font-family: sans-serif;
 }
