--- a/examples/editor-sdk-react/src/style.css
+++ b/examples/editor-sdk-react/src/style.css
@@ -2,16 +2,27 @@
   box-sizing: border-box;
 }
 
-textarea {
-  width: 100%;
-  padding: 16px;
-  line-height: 1.4;
-  resize: none;
+body {
   font-family: sans-serif;
 }
 
-input {
-  width: 400px;
+input,
+textarea,
+[contenteditable] {
+  font: inherit;
+  line-height: 1.5;
+  width: 600px;
   padding: 8px 12px;
-  font-family: sans-serif;
+  overflow: auto;
+}
+
+label {
+  display: block;
+  margin-bottom: 4px;
+}
+
+[contenteditable] {
+  height: 10rem;
+  border: 1px solid;
+  resize: both;
 }
